# OpenGL_Custom

./: CMakeLists.txt
3rd/: CMakeLists.txt  glad.c
app/: CMakeLists.txt  callback_func.h  glLight.cpp  glSpace.cpp  glSpace.h  includes.h  init_functions.h  main.cpp  pre_rendering.h  rendering.h  shader.cpp  shader.h  vertex.h
glsl/: fragment.shader  fragment_ex.shader  vertex.shader
include/: CMakeLists.txt  glLight.h  glSpace.h  image_loader.h  includes.h  init_functions.h  pre_rendering.h  read_shader.h  rendering.h  sample_rectangle.h  sample_triangle.h  shader.h  vertex.h
include/glad/: glad.h
